--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,16 @@
 /*  your css code here. If applicable */
-.navbar{
+.container{
 	background-color: #D3D3D3;
 	padding: 10px
 }
-.navbar ul{
+.container ul{
 	
 	list-style: none;
 	margin: 0;
 	padding: 0;
 }
-.navbar li{
+.container li{
 	display: inline;
 	margin-right: 1rem;
 }
 	
-}
